Added support for marking a game session as finished

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,16 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Ren'Py Filed
+*.rpyc
+*.bak
+
+log.txt
+
+saves
+cache
+tmp
+
 # =========================
 # Operating System Files
 # =========================
